# ads_rag

./: README.md  gmail_promotions_puller.py  requirements.txt
sv_ray_cluster_access/: .env.example  README.md  config.yaml  mkdocs.yml  pyproject.toml
sv_ray_cluster_access/docs/: index.md
sv_ray_cluster_access/src/ray_cluster_access/: sv_inference_api.py  sv_ray_cluster_api.py
trails/: clip_encoder.py  dimension1_indexer.py  dimension2_extractor.py  observations.txt  query.py  test.py  test_models.py
trails/images/: attributes.json  metadata.json
