[project]
name = "sv-ray-cluster-access"
version = "0.1.0"
description = "ray_cluster_access"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.81.9",
    "svlearn-bootcamp>=0.1.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

# If you also build sdists and want data included:
[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    # ... other includes like README, pyproject.toml, etc.
]

[tool.hatch.build.targets.wheel]
packages = ["src/ray_cluster_access"]
